After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 750918 - genmarshal: silence register storage class warnings
genmarshal: silence register storage class warnings
Status: RESOLVED FIXED
Product: glib
Classification: Platform
Component: general
unspecified
Other All
: Normal normal
: ---
Assigned To: gtkdev
gtkdev
Depends on:
Blocks:
 
 
Reported: 2015-06-14 04:09 UTC by Michael Catanzaro
Modified: 2015-06-14 16:55 UTC
See Also:
GNOME target: ---
GNOME version: ---


Attachments
genmarshal: silence register storage class warnings (1.40 KB, patch)
2015-06-14 04:09 UTC, Michael Catanzaro
committed Details | Review

Description Michael Catanzaro 2015-06-14 04:09:21 UTC
Clang has a -Wdeprecated-register warning that would be nice to not trigger needlessly.
Comment 1 Michael Catanzaro 2015-06-14 04:09:30 UTC
Created attachment 305223 [details] [review]
genmarshal: silence register storage class warnings

Using the register keyword triggers warnings on noteworthy compilers
(clang), since it's deprecated in C++ and at danger of being removed
from the language. There is no reason to use it since it isn't 1980
anymore.
Comment 2 Colin Walters 2015-06-14 14:49:34 UTC
Review of attachment 305223 [details] [review]:

Yes.
Comment 3 Michael Catanzaro 2015-06-14 16:55:30 UTC
Attachment 305223 [details] pushed as 9f90ee5 - genmarshal: silence register storage class warnings